2008-02-14 Ian Rutt
 * Bumped version for release 1.0.6
 * Updated NEWS

2008-02-14 Ian Rutt
 * Added section on using restarts to User Guide - adapted from post to
   glimmer-discuss.
 * Various minor edits to tutorial and numerics sections. 
 * Updated structure diagrams in developers guide. 
 * Removed very incomplete and confusing physics documentation.

2008-01-23 Ian Rutt
 * Numerous changes to User Guide, in preparation for 1.0.6 release.

2007-08-29 Ian Rutt
 * Corrected error in glint docs - conflicting units specified for precip.

2007-05-30 Ian Rutt
 * Added enmabal build option to install instructions

2007-05-29 Ian Rutt
 * Bumped version for release 1.0.4
 * Updated NEWS
 * Bumped version to 1.0.5 in bugfix branch

2007-05-04 Ian Rutt
 * Updated description of GLINT output file handling

2007-03-17 Ian Rutt
 * Checked through User Guide, and expanded/corrected various parts
 * Bumped version for release 1.0.0
 * Updated NEWS
 * Bumped version to 1.0.1 un bugfix branch

2007-03-16 Ian Rutt
 * Fixed some underscore bugs.

2007-01-05 Felix Hebeler
 * Update tut, fix some typos

2006-12-05 Magnus Hagdorn
 * doc/tut/gtest.tex: fixed some LaTeX errors

2006-12-01 Magnus Hagdorn
 * hook up Felix's tutorial to main documentation and minor fixes to
   build system

2006-11-07 Ian Rutt
 * Added data_lapse_rate to GLINT docs

2006-10-27 Ian Rutt
 * Updated GLINT and GLIDE docs to reflect some recent changes
 * This version uploaded to website. Tagged CVS_DOCS_061027
 * Added missed changes to API docs. Tagged CVS_DOCS_061027A

2006-08-14 Ian Rutt
 * Corrected typo in GLINT API doc. Precip input is in mm/s

2006-08-01 Ian Rutt
 * Corrected GLINT multiple instances typo in glint.tex
 * Substantial addition to developers' guide, aimed at introducing glimmer
 structure and programming techniques to beginners.
	
2006-04-25 Ian Rutt
 * Removed redundant options from GLIDE documentation
 * Added daily PDD scheme option to GLINT docs (but no docs of the scheme yet)
