@@ -2,10 +2,11 @@
 \newboolean{glimmertools}
 \setboolean{glimmertools}{@dotools@}
 \frontmatter
-\title{GLIMMER {\glimmerver} Documentation}
-\author{Magnus Hagdorn\thanks{Magnus.Hagdorn@ed.ac.uk}, Ian
-  Rutt\thanks{I.C.Rutt@bristol.ac.uk}, Tony Payne\thanks{A.J.Payne@bristol.ac.uk} 
-  and Felix Hebeler\thanks{fhebeler@geo.unizh.ch}}
+\title{Glimmer Documentation ({\glimmerver}) }
+\author{Magnus Hagdorn\thanks{University of Edinburgh (Magnus.Hagdorn@ed.ac.uk)}, Ian
+  Rutt\thanks{Swansea University (i.c.rutt@swansea.ac.uk)}, Tony
+  Payne\thanks{University of Bristol (A.J.Payne@bristol.ac.uk)} 
+  and Felix Hebeler\thanks{University of Zurich (fhebeler@geo.unizh.ch)}}
 \maketitle
 \tableofcontents
 
