@@ -1,4 +1,8 @@
 2008-02-14 Ian Rutt
+ * Fixed front page (I'd edited the wrong file...)
+ * Tagged as RELEASE_1_0_6
+
+2008-02-14 Ian Rutt
  * Bumped version for release 1.0.6
  * Updated NEWS
 
